--- a/package.json
+++ b/package.json
@@ -1,8 +1,38 @@
 {
-  "name": "travel-site-zif",
+  "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "^3.2.1",
-    "normalize.css": "^7.0.0"
+    "jquery": "*",
+    "jquery-smooth-scroll": "*",
+    "lazysizes": "*",
+    "normalize.css": "*",
+    "picturefill": "*",
+    "waypoints": "*"
+  },
+  "devDependencies": {
+    "autoprefixer": "*",
+    "babel-core": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "*",
+    "browser-sync": "*",
+    "del": "*",
+    "gulp": "*",
+    "gulp-cssnano": "*",
+    "gulp-imagemin": "*",
+    "gulp-modernizr": "*",
+    "gulp-postcss": "*",
+    "gulp-rename": "*",
+    "gulp-rev": "*",
+    "gulp-svg-sprite": "*",
+    "gulp-svg2png": "*",
+    "gulp-uglify": "*",
+    "gulp-usemin": "*",
+    "gulp-watch": "*",
+    "postcss-hexrgba": "*",
+    "postcss-import": "*",
+    "postcss-mixins": "*",
+    "postcss-nested": "*",
+    "postcss-simple-vars": "*",
+    "webpack": "*"
   }
 }
